# glfun

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  cube  frag.glsl  lib.hh  main.cc  shader.cc  shader.hh  vert.glsl  vertex.hh
.cache/clangd/index/: _fixes.hpp.0252E38B08A5EEE4.idx  _vectorize.hpp.F57EB17BB58AF3A1.idx  common.hpp.4292F8BF2A84E4C7.idx  compute_common.hpp.05E33E9BAB3B05A8.idx  compute_vector_relational.hpp.306A164653A31A0B.idx  constants.hpp.4F2147CAEEAD8E37.idx  constants.inl.0488AC5ECDC107D6.idx  epsilon.hpp.109E726E5841A366.idx  epsilon.inl.852A340A1252C26A.idx  exponential.hpp.D5AC60025F55DB63.idx  func_common.inl.0D8714FD950065B1.idx  func_exponential.inl.89B61E04710BEDAD.idx  func_geometric.inl.8382037200563E49.idx  func_integer.inl.462BC611E9B075F8.idx  func_matrix.inl.065C5E4630246F4D.idx  func_packing.inl.BFFBD6FC3599D29D.idx  func_trigonometric.inl.8DE2C942DEDD35E6.idx  func_vector_relational.inl.A5BCB690F1D1BA4F.idx  fwd.hpp.FBE38CE4ED216ACE.idx  geometric.hpp.1B92769734ACCBB9.idx  gl.h.1B23AC5328C93D3E.idx  glm.hpp.9B0B431A81F2ECE8.idx  integer.hpp.52ABD9091829D944.idx  linmath.h.645B9E0734E25EE2.idx  main.cc.4F7E23DCA3ED69ED.idx  mat2x2.hpp.872850D180D72EB6.idx  mat2x3.hpp.2EC29593418A9584.idx  mat2x4.hpp.E84F3673184A7EFD.idx  mat3x2.hpp.E5A8D9113B9700C8.idx  mat3x3.hpp.C4421F62620BC591.idx  mat3x4.hpp.41EB9454306EEC09.idx  mat4x2.hpp.3D9A1D7AD452FB63.idx  mat4x3.hpp.4A8EF8417B102EDF.idx  mat4x4.hpp.E8C0A2B896558E9E.idx  matrix.hpp.7783648628A6A6C6.idx  matrix_clip_space.hpp.EE6664D6BF00B29D.idx  matrix_clip_space.inl.8587C928E1DD9C96.idx  matrix_double2x2.hpp.24D30753B483C89B.idx  matrix_double2x2_precision.hpp.EE38C0014955F0C3.idx  matrix_double2x3.hpp.FC26C5073B9B6312.idx  (+117 more)
glad/: gl.h
src/: CMakeLists.txt  Justfile  Makefile  camera.hh  compile_commands.json  event_loop.hh  eventloop.hh  frag.glsl  impl.cc  indexbuffer.cc  indexbuffer.hh  lib.hh  main.cc  main.hh  obj.hh  renderer.hh  shader.cc  shader.frag  shader.hh  shader.vert  texture.cc  texture.hh  vert.glsl  vertex.cc  vertex.hh  vertexarray.cc  vertexarray.hh  vertexbuffer.cc  vertexbuffer.hh
